[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.11

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
]

[ Milestone
	Fixed a bug when noDamageToSameLookfeet was enabled that caused no damage between monsters and players if they have the same lookfeet.
]