@@ -21,7 +21,7 @@
 		acidgame, jiddo, mips_act, nfries88, otserv_simone, primer13r,
 		remere, shivoc, smygflik, snack, tliffrag and wrzasq.
 
-	The rest of the credits goes to following The Forgotten Server developers:
+	The rest of the credits goes to following The Forgotten Server(TFS) developers:
 		Talaturen
 			Project Manager
 			C++ Programmer
@@ -37,6 +37,8 @@
 
 		Fallen
 			C++ Programmer
+			Data Directory Manager
+			Lua Scripter
 ]
 
 [ LICENSE
@@ -58,7 +60,7 @@
 
 [ DONATIONS
 	We are not really accepting donations to the project,
-	but feel free to donate to the forum we're hosted at
+	but feel free to donate to the forum that's hosted at otland.net
 	for higher priority support and other benefits:
 		http://otland.net/payments.php
 ]
@@ -99,6 +101,23 @@
 				ln /usr/lib/libboost_regex-mt.so /usr/lib/libboost_regex.so && ln /usr/lib/libboost_regex-mt.a /usr/lib/libboost_regex.a && ln /usr/lib/libboost_thread-mt.so /usr/lib/libboost_thread.so && ln /usr/lib/libboost_thread-mt.a /usr/lib/libboost_thread.a
 
 	Windows
+		MinGW
+			Download latest MinGW and follow the compiling tutorial \
+			that will be soon made by Talaturen or Fallen \
+			then open up a new command line and type this:
+			cd /path/to/sources
+			NOTE: replace "/path/to/sources" with the actuall path.
+			for example if you are building with latest mingw do:
+			mingw32-make WIN32=1 LATEST_MINGW=1
+			If you want sqlite instead of mysql do this:
+			mingw32-make WIN32=1 LATEST_MINGW=1 SQLITE=1
+			If you are compiling with an older version of mingw then \
+			just remove LATEST_MINGW=1.
+			NOTE: WIN32 is used for windows so don't remove it while \
+			compiling.
+			NOTE: that this will compile the GUI one, if you don't \
+			want GUI just remove -mwindows and add -D__CONSOLE__ in CXXFLAGS
+
 		Dev-Cpp
 			Download The Forgotten Dev-Cpp and the sources from:
 				http://otland.net/showthread.php?t=1024
